Working minus validering...

--- a/Opgave11_2020/Views/Home/Index.cshtml
+++ b/Opgave11_2020/Views/Home/Index.cshtml
@@ -5,21 +5,6 @@
 <div class="container">
     <h1 class="display-1">Udfyld min form</h1>
     <p>
-        Udfyld nedenstående formular og tryk på send.
+        <a href="/GetFormInput/Index"<span>Her finder du formularen</span></a>
     </p>
-        <form action="Home/Input" id="Input" method="get">
-            <label for="firstName">Fornavn:</label><br>
-            <input type="text" id="firstName" name="firstName" value=""><br><br>
-
-            <label for="lastName">Efternavn:</label><br>
-            <input type="text" id="lastName" name="lastName" value=""><br><br>
-
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" value=""><br><br>
-
-            <label for="phone">Telefonnummer:</label><br>
-            <input type="tel" id="phone" name="phone" value=""><br><br>
-
-            <input type="submit" value="Submit" class="submit">
-        </form>
 </div>
