Nu med Formular-siden som startside

--- a/Opgave11_2020/Views/GetFormInput/Index.cshtml
+++ b/Opgave11_2020/Views/GetFormInput/Index.cshtml
@@ -20,6 +20,6 @@
         <label for="phone">Telefonnummer:</label><br>
         <input type="tel" id="phone" name="phone" value=""><br><br>
 
-        <input class="btn btn-dark" type="submit" value="Submit" class="submit">
+        <input class="btn btn-dark" type="submit" value="Send" class="submit">
     </form>
 </div>
